--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: java
-    - mvn test
-    - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+  - jdk_switcher use oraclejdk8
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
