--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ jdk:
   - oraclejdk8
 script:
   - jdk_switcher use oraclejdk8
-  - mvn clean verify
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
