--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 			<version>4.2</version>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<!--other repositories if any-->
+		<repository>
+			<id>project.local</id>
+			<name>project</name>
+			<url>file:${project.basedir}/repo</url>
+		</repository>
+	</repositories>
 	
 	<build>
 		<plugins>
